[package]
name = "empurror"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy_ecs = "0.17.3"
hexx = "0.23.0"
# Set bevy dependency log level to debug only
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9.2"
rand_chacha = "0.9.0"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
